--- a/other/everyday/2022/11/2022-11-06.md
+++ b/other/everyday/2022/11/2022-11-06.md
@@ -8,14 +8,14 @@
 思路：映射的字符串之间不存在前缀问题，依次寻找匹配的字符串，映射即可。  
 
 
-代码：problemset-new/016/01678-goal-parser-interpretation/1678.cpp
+代码：[problemset-new/016/01678-goal-parser-interpretation/1678.cpp](problemset-new/016/01678-goal-parser-interpretation/1678.cpp)
 
 
 同日比赛：
 
 - 第 318 场周赛 
     - 比赛地址: https://leetcode.cn/contest/weekly-contest-318/
-    - 代码: /contest/3/316
+    - 代码: [/contest/3/316](/contest/3/316)
     - 题解：https://mp.weixin.qq.com/s/8Vt-7XRNKCuElj0-y0sxQw
     - 比赛速览：A 简单题; B 双指针; C 双指针 & 最小堆; D 动态规划 
 
