--- a/other/everyday/2022/11/2022-11-08.md
+++ b/other/everyday/2022/11/2022-11-08.md
@@ -1,9 +1,9 @@
-# 2022-11-07 每日一题
+# 2022-11-08 每日一题
 
 
 题目：1684. 统计一致字符串的数目   
 题意：给一个字符集合，问字符串列表中，有几个字符串的字符全部都在字符集合里。    
-思路：循环字符串列表，依次判断字符串的字符是否都在集合里即可。  
+思路：循环遍历字符串列表，依次判断字符串的字符是否都在集合里即可。  
 小技巧：字符全是小写字母，可以使用大小为 26 的数组代替集合。
 
 代码：[/problemset-new/016/01684-count-the-number-of-consistent-strings/1684.cpp](/problemset-new/016/01684-count-the-number-of-consistent-strings/1684.cpp)
