--- a/other/everyday/2022/11/2022-11-09.md
+++ b/other/everyday/2022/11/2022-11-09.md
@@ -4,11 +4,13 @@
 题目：764. 最大加号标志  
 题意：给一个 0/1 矩阵，选择一个值为 1 的中心并向上下左右同时延伸组成加号。问加号全是 1 时，1 的个数最多有多少个？    
 数据范围: 最大 500  
-思路：
+解题思路：
 1. 输入是 0 的坐标，先构造出矩阵, 复杂度 O(n^2) 。
 2. 预处理出每个中心上下左右 1 最长能够延伸的距离, O(4*n^2)。  
 3. 枚举中心, 根据上下左右四个延伸距离, 得到加号的延伸距离，得到答案 O(4*n^2)。  
 综合复杂度: O(n^2)
+
+小技巧：预处理时复用上一个信息，从而把复杂度从 O(4*n^3) 降为 O(4*n^2)。
 
 思考题：假设矩阵很大，最大 10^5, 是否有解法。  
 
