--- a/other/everyday/2022/11/2022-11-17.md
+++ b/other/everyday/2022/11/2022-11-17.md
@@ -6,29 +6,29 @@
 
 
 思路1: 暴力查找，即贪心的方法对集合里每个字符串与原始字符串匹配。  
-时间复杂度：O(n*m + m*L)  
-空间复杂度：O(1)   
+时间复杂度：`O(n*m + m*L)`  
+空间复杂度：`O(1)`   
 
 
 思路2：索引法。  
 索引：预处理出原始字符串每个位置之后26个字符的首次出现索引。  
 查找：根据索引不断的匹配下个字符即可  
-时间复杂度：O(n*26 + m*L)  
-空间复杂度：O(n*26)
+时间复杂度：`O(n*26 + m*L)`  
+空间复杂度：`O(n*26)`  
 
 
 思路3：状态机法。  
 状态：待查找字符串的ID以及当前匹配的位置，然后根据当前字符分为26个集合。  
 查找：遍历原始字符串，遇到某个字符，对应的集合状态进行转移。  
-复杂度：O(n + m*L)  
-空间复杂度：O(m)  
+复杂度：`O(n + m*L)`  
+空间复杂度：`O(m)`  
 
 
 思路4：二分查找  
 预处理：根据字符对原始字符串中字符位置进行分组，则可以得到每个字符的位置升序列表。   
 查找：根据待查找字符串当前位置，用下个字符去字符的位置列表查找下个最小的位置。  
-时间复杂度：O(m * l * log(n))  
-空间复杂度：O(n)  
+时间复杂度：`O(m * l * log(n))`  
+空间复杂度：`O(n)`  
 
 
 
