--- a/other/everyday/2022/11/2022-11-19.md
+++ b/other/everyday/2022/11/2022-11-19.md
@@ -1,13 +1,14 @@
 # 2022-11-19 每日一题
 
 
-题目: 1732. 找到最高海拔
-题意: 有 n 个海拔，起始海拔高度为 0，随后给出相邻海拔的高度差，求最高海拔。
+题目: 1732. 找到最高海拔  
+题意: 有 n 个海拔，起始海拔高度为 0，随后给出相邻海拔的高度差，求最高海拔。  
 
 
-思路1: 累计计算出真实海拔，求最大值即可。
+思路1: 累计计算出真实海拔，求最大值即可。  
 
 
+点评：简单题，5分钟内可以通过  
 
 
 代码: [/problemset-new/017/01732-find-the-highest-altitude](/problemset-new/017/01732-find-the-highest-altitude)  
