--- a/other/everyday/2022/11/2022-11-21.md
+++ b/other/everyday/2022/11/2022-11-21.md
@@ -15,7 +15,7 @@ xAyB 代表 A 选择 x 个，B选择 y 个。
 边界：个数为负数时，按 0 个处理。  
 
 
-key point：输入数据范围为 `10^9`，标准化后为 `0.25 * 10^9`，依旧很大。  
+key point：输入数据范围为 `10^9`，标准化后为 `10^9/25`，依旧很大。  
 经过计算，n 比较大时，精度为 5 位小数时，四舍五入答案都是 1。  
 所以，只需要计算 1000 以内的答案，大于 1000 时，直接输出 1。  
 
