--- a/other/everyday/2022/11/2022-11-21.md
+++ b/other/everyday/2022/11/2022-11-21.md
@@ -20,7 +20,7 @@ key point：输入数据范围为 `10^9`，标准化后为 `10^9/25`，依旧很
 所以，只需要计算 1000 以内的答案，大于 1000 时，直接输出 1。  
 
 
-点评：很经典的题型，算法仅仅适用于小数据范围  
+点评：很经典的题型，算法仅仅适用于小数据范围，而大数据范围答案确定，可以直接快速返回。  
 
 
 代码: [/problemset-new/008/00808-soup-servings](/problemset-new/008/00808-soup-servings)  
