--- a/other/everyday/2022/11/2022-11-23.md
+++ b/other/everyday/2022/11/2022-11-23.md
@@ -7,7 +7,7 @@
 思路：扫描计算每个球需要放在哪个盒子里，然后遍历盒子，取最大值。  
 
 
-小技巧：使用 `unordered_map` 统计，放去盒子就求 max，就不需要遍历盒子了。  
+小技巧：使用 unordered_map 统计，边统计边求答案即可，这样就不需要遍历盒子了。  
 
 
 思考题：假设区间大小为 `10^18`，该如何做这道题。  
