--- a/other/everyday/2022/12/2022-12-04.md
+++ b/other/everyday/2022/12/2022-12-04.md
@@ -11,3 +11,11 @@
 
 
 代码: [/problemset-new/017/01774-closest-dessert-cost](/problemset-new/017/01774-closest-dessert-cost)  
+
+第 322 场周赛题解：
+A 根据空格判断即可。  
+B 分组和固定，分组也确定，直接分组计算即可。  
+C 允许重复路径，答案是连通图上的最小边。  
+D 先划分连通分支，分别计算最优答案。对于每个连通分支，枚举每个顶点为第一组的点，贪心求最值即可
+
+比赛题意与详细题解参考：https://mp.weixin.qq.com/s/eRikbTNaNbnp6I7fJnedJA  
