--- a/other/everyday/2022/12/2022-12-05.md
+++ b/other/everyday/2022/12/2022-12-05.md
@@ -3,7 +3,7 @@
 
 题目: 1687. 从仓库到码头运输箱子  
 难度：困难   
-题意: n 个有重量的箱子需要按顺序从仓库运到指定的码头。
+题意: n 个有重量的箱子需要按顺序从仓库运到指定的码头。  
 一辆车每次运的箱子数量和箱子总重量有限制。  
 仓库到码头以及码头与码头之间的距离都是一单位。
 问一趟车运完所有箱子并返回仓库的最短运行距离。  
@@ -11,5 +11,27 @@
 
 分析：比较难的题，有三种解法。  
 
+状态定义：`dp[r]` 前 r 个箱子的最优答案。  
+显然，`dp[r]`的值是非递减的。  
+状态转移方程: `dp[r] = dp[l-1]+f(l, r)`  
 
-方法1：贪心递推。
+
+方法1：向前递归动态规划。  
+理论：双指针记录最后一车`[l,r]`，这个范围越大，大部分情况答案`dp[r]`就越小。  
+特殊处理：在最大范围内时，如果`dp[l-1]==dp[l]`，则最后一车不拉这个前缀，由此可能使得答案更优。  
+
+
+方法2: 向后递推动态规划  
+理论：双指针记录当前起点 l 向后的最大 r，这个范围越大，大部分情况答案`dp[r]`就越小。  
+特殊处理：在最大范围内，相同后缀放在下一车可能更优。  
+
+
+方法3：动态规划 + 单调队列优化  
+暴力转移方程: `dp(r) = min(dp(l-1)+f(l,r))`  
+复杂度:`O(n^2)`  
+对于 `f(l,r)`,通过前缀相邻数组不同个数的差值，可以转化为 `F(r)-F(l-1)`。  
+故动态转移方程为 `dp(r) = min(dp(l-1)+F(r)-F(l-1)) = min(dp(l-1)-F(l-1))+F(r)`  
+对于所有前缀求 min，至于 l 自身有关，所以可以通过单调队列优化。  
+
+
+代码：[/problemset-new/016/01687-delivering-boxes-from-storage-to-ports](/problemset-new/016/01687-delivering-boxes-from-storage-to-ports)
